# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-07-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add all the warnings previously excluded in the rebar_src.config.in file
    * Fix the various warnings within the external dependencies
    * Reformat the reltool.config.in file to be simpler
    * Fix autoconf macros so that AC_LANG_CALL is no longer used to fix
      ZeroMQ library detection (and GMP library detection)

2013-07-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add service prefix configuration validation
    * Add ACL configuration validation
    * Update uuid

2013-07-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add type specifications to the cloudi module and the
      cloudi_service module, for use with Erlang CloudI services
    * Fix emysql crypto hash usage (error is in 1.2.4)
    * Update edoc documentation

2013-07-05 Mahesh Paolini-Subramanya   <mahesh [at] dieswaytoofast (dot) com>

    * Merge elasticsearch database integration

2013-07-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the build system so that it can use an external rebar executable
      specified by the configuration
    * Add root rebar.config for using CloudI as a rebar dependency
    * Add the hello_world3 example for rebar integration with CloudI
      as a dependency for a release

2013-07-03 Lukas Larsson   <garazdawi [at] gmail (dot) com>

    * Fix emysql source file encoding for R17

2013-07-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix for internal services so that the terminate function is always called
    * Fix queuing on websocket connection for outgoing service requests

2013-06-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the CloudI Service API automatically discover its functions
      from the exports of the module cloudi_service_api within
      cloudi_service_api_requests
